fix: mobile menu item alignment

--- a/src/static/css/_navigation.css
+++ b/src/static/css/_navigation.css
@@ -112,8 +112,9 @@ nav a {
     margin-block-start: calc(-1 * 6 / 16 * 1rem);
     margin-inline: calc(-1 * var(--space-m));
     padding-block: var(--space-m);
+    padding-inline-start: var(--space-m);
     position: relative;
-    text-align: center;
+    text-align: start;
     text-decoration: none;
     width: 100vw;
 }
@@ -313,6 +314,7 @@ nav a[rel="home"]:active:focus {
         box-shadow: 0 -0.75rem 0 -0.375rem var(--fl-linkColor, var(--nav-item-border)) inset;
         color: var(--fl-linkColor, var(--color-green-800));
         margin-inline: 0;
+        text-align: center;
         width: auto;
     }
 
